# PROJETS-2025

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/asserposition/: Correction distance commandée, distance réelle.xlsx  package.xml  setup.cfg  setup.py
src/asserposition/asserposition/: asservissement.py  cmd_dist_publisher.py  cmd_vel_rampPublisher.py  cmd_vel_rampPublisher_dev.py  cmd_vel_turnPublisher.py
src/imu_package/: package.xml  setup.cfg  setup.py
src/imu_package/config/: ekf.yaml
src/imu_package/imu_package/: cmd_test.py  wheel_listener.py
src/imu_package/launch/: position.launch.py
src/robot_accessories/: package.xml  setup.cfg  setup.py
src/robot_accessories/launch/: allAccessories.launch.py
src/robot_accessories/robot_accessories/: .sequence.txt.swp  lidarLedsPrepare.py  matrice.py  matrice_test.py  motorsPrepare.py  sequence.txt  sequenceJardinBLeue.txt  sequenceJardinBleu.txt  sequenceJardinBleue Ni.txt  sequenceJardinBleue.txt  sequenceJardinJaune copy 2.txt  sequenceJardinJaune copy.txt  sequencePO.txt  sequenceRead.py  sequenceTestJaune.txt  servosPrepare.py  servosPrepareOld.py  testPinces.sh
src/robot_bringup/: CMakeLists.txt  package.xml  readme.txt
src/robot_bringup/launch/: full_robot.py  (+1 more)
src/robot_camera/: setup.cfg  setup.py
src/robot_communication/: setup.cfg  setup.py
src/robot_description/: CMakeLists.txt  readme.txt
src/robot_gazebo/: CMakeLists.txt
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml  smoother.yaml
src/robot_navigation/launch/: map_server.launch.py  nav2.launch.py  smoother.launch.py
src/robot_navigation/maps/: map.yaml
src/robot_sensors/: package.xml  setup.cfg  setup.py
(+110 files in other folders)
